--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,19 @@
     --h2-font:2.25rem;
     --p-font:0.9rem;
 }
-
 *::selection {
     background: var(--main-color);
     color: #fff;
+}
+body{
+    color: var(--text-color);
+    background: var(--bg-color);
+}
+header{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    z-index: 1000;
+    display: flex;
 }
