--- a/css/style.css
+++ b/css/style.css
@@ -50,3 +50,12 @@ header{
     padding: 10px 20px;
     font-weight: 500;
 }
+.navbar a:hover{
+    color: var(--main-color);
+    transition: .4s;
+}
+#menu-icon{
+    font-size: 2rem;
+    cursor: pointer;
+    display: none;
+}
