--- a/css/style.css
+++ b/css/style.css
@@ -9,22 +9,25 @@
 }
 
 :root {
-    --main-color:#ff702a;
-    --text-color:#fff;
-    --bg-color:#1e1c2a;
-    --big-font:5rem;
-    --h2-font:2.25rem;
-    --p-font:0.9rem;
+    --main-color: #ff702a;
+    --text-color: #fff;
+    --bg-color: #1e1c2a;
+    --big-font: 5rem;
+    --h2-font: 2.25rem;
+    --p-font: 0.9rem;
 }
+
 *::selection {
     background: var(--main-color);
     color: #fff;
 }
-body{
+
+body {
     color: var(--text-color);
     background: var(--bg-color);
 }
-header{
+
+header {
     position: fixed;
     top: 0;
     right: 0;
@@ -36,33 +39,40 @@ header{
     padding: 30px 170px;
     background: var(--bg-color);
 }
-.logo{
+
+.logo {
     color: var(--main-color);
     font-weight: 600;
     font-size: 2.4rem;
 }
-.navbar{
+
+.navbar {
     display: flex;
 }
-.navbar a{
+
+.navbar a {
     color: var(--text-color);
     font-size: 1.1rem;
     padding: 10px 20px;
     font-weight: 500;
 }
-.navbar a:hover{
+
+.navbar a:hover {
     color: var(--main-color);
     transition: .4s;
 }
-#menu-icon{
+
+#menu-icon {
     font-size: 2rem;
     cursor: pointer;
     display: none;
 }
-section{
+
+section {
     padding: 70px 17%;
 }
-.home{
+
+.home {
     width: 100%;
     min-height: 90vh;
     display: grid;
@@ -70,8 +80,84 @@ section{
     grid-gap: 1.5rem;
     align-items: center;
 }
-.home-img img{
+
+.home-img img {
     max-width: 100%;
     width: 600px;
     height: auto;
+}
+
+.home-text h1 {
+    font-size: var(--big-font);
+    color: var(--main-color)
+}
+
+.home-text h2 {
+    font-size: var(--h2-font);
+    margin: 1rem 0 2rem;
+}
+
+.btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background: var(--main-color);
+    color: #fff;
+    border-radius: 0.5rem;
+}
+
+.btn:hover {
+    transform: scale(1.2) translateY(10px);
+    transition: 4s;
+}
+
+.about {
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    grid-gap: 1.5rem;
+    align-items: center;
+}
+
+.about-img img {
+    max-width: 100%;
+    width: 480%;
+    height: auto;
+}
+
+.about-text span {
+    color: var(--main-color);
+    font-weight: 600;
+}
+
+.about-text h2 {
+    font-size: var(--h2-font);
+}
+
+.about-text p {
+    margin: 0.8rem 0 1.8rem;
+    line-height: 1.7;
+}
+.heading {
+    text-align: center;
+}
+.heading span{
+    color: var(--main-color);
+    font-weight: 600;
+}
+.heading h2 {
+    font-size: var(--h2-font);
+} 
+.menu-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, auto));
+    grid-gap: 1.5rem;
+    align-items: center;
+}
+.box{
+    position: relative;
+    margin-top: 4rem;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center ;
 }
