--- a/css/style.css
+++ b/css/style.css
@@ -173,11 +173,13 @@ section {
 .box-img {
     width: 220px;
     height: 220px;
+
 }
 
 .box-img img {
     width: 100%;
     height: 100%;
+    align-items: center;
 }
 
 .box h2 {
